2024-10-29 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSLayoutAnchor.h: Add missing include that is required after a change in base.
	* Source/NSTableView.m: Forward declare new methods.

2024-08-29 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSBundleAdditions.m: Quick fix for .gorm loading
	not returning top level objects.

2024-08-18 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSTreeController.h: Update header
	* Headers/AppKit/NSTreeNode.h: Update header
	* Source/GNUmakefile: Add new class
	* Source/GSBindingHelpers.h: Add NSString category
	* Source/GSControllerTreeProxy.[hm]: Proxy class
	for NSTreeController, a subclass of NSTreeNode.
	* Source/GSThemeDrawing.m: Optimize code a bit and
	add changes for bindings.
	* Source/GSXib5KeyedUnarchiver.m: Add support for new keys
	on NSTreeController.
	* Source/NSKeyValueBinding.m: Add new methods to
	GSKeyValueBinding
	* Source/NSOutlineView.m: Add support for bindings.
	* Source/NSTreeController.m: Implement new methods.
	* Source/NSTreeNode.m: Implement new methods

2024-07-25 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSBrowser.h: Add declarations for
	10.6 delegate methods for item-based browsers.
	* Source/NSBrowser.m: Add support for 10.6 item-based
	delegate methods.

2024-06-28 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/AppKit.h: Add NSMenuToolbarItem.h
	* Headers/AppKit/NSMenuToolbarItem.h: Declarations
	for NSMenuToolbarItem.
	* Images/GNUmakefile: Add new image
	* Images/nsmapping.strings: Add image mapping
	* MISSING: Remove this class from the list
	* Source/GNUmakefile: Add class to build
	* Source/NSMenuToolbarItem.m: Implementation of
	NSMenuToolbarItem.

2024-06-07 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Additions/GNUstepGUI/GSTheme.h: Add new methods
	for rendering view-based outline/table views.
	* Headers/AppKit/NSTableRowView.h: Add implementation